fix wrap on ingredients

--- a/public/style.css
+++ b/public/style.css
@@ -120,6 +120,7 @@
 .ingredient-item {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
   justify-content: flex-start;
   font-size: 20px;
   margin-left: 20px; }
