--- a/src/style/_recipe-info-box.scss
+++ b/src/style/_recipe-info-box.scss
@@ -62,6 +62,7 @@
 .ingredient-item {
   display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
   justify-content: flex-start;
   font-size: 20px;
   margin-left: 20px;
